--- a/themes/landscape/layout/_partial/head.ejs
+++ b/themes/landscape/layout/_partial/head.ejs
@@ -40,5 +40,5 @@
   <link rel="manifest" href="/favicon/site.webmanifest">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
-  <%- partial('_partial/google-adsense') %>
+  <%- partial('google-adsense') %>
 </head>
