--- a/themes/landscape/layout/_partial/head.ejs
+++ b/themes/landscape/layout/_partial/head.ejs
@@ -41,4 +41,7 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
   <%- partial('google-adsense') %>
+  <script type="text/javascript" language="javascript">
+    var vc_pid = "886947680";
+  </script><script type="text/javascript" src="//aml.valuecommerce.com/vcdal.js" async></script>
 </head>
