--- a/themes/landscape/layout/_partial/article.ejs
+++ b/themes/landscape/layout/_partial/article.ejs
@@ -3,9 +3,19 @@
     <%- partial('post/date', {class_name: 'article-date', date_format: null}) %>
     <%- partial('post/category') %>
   </div>
-  <div>
+  <div class="long-banner">
     <!-- admax -->
     <script src="https://adm.shinobi.jp/s/12131bb3b88e69a6c92fea974e06ff74"></script>
+    <!-- admax -->
+  </div>
+  <div class="pc-banner">
+    <!-- admax -->
+    <script src="https://adm.shinobi.jp/s/f432de225b444e61f92fc5c51264b61c"></script>
+    <!-- admax -->
+  </div>
+  <div class="tablet-banner">
+    <!-- admax -->
+    <script src="https://adm.shinobi.jp/s/7aed61148e0b622706ed4b1286a2aa7a"></script>
     <!-- admax -->
   </div>
   <div class="article-inner">
