--- a/themes/landscape/source/css/_partial/sidebar-aside.styl
+++ b/themes/landscape/source/css/_partial/sidebar-aside.styl
@@ -1,6 +1,14 @@
 #sidebar
   @media mq-normal
-    column(sidebar-column)
+    display: inline
+    float: left
+    width: 300px
+    margin: 0 10px
+  @media mq-small-pc
+    display: inline
+    float: left
+    width: 200px
+    margin: 0 10px
 
 .widget-wrap
   margin: block-margin 0
