--- a/themes/landscape/layout/_partial/sidebar.ejs
+++ b/themes/landscape/layout/_partial/sidebar.ejs
@@ -1,18 +1,23 @@
 <aside id="sidebar"<% if (theme.sidebar === 'bottom'){ %> class="outer"<% } %>>
-  <div class="widget-wrap">
+  <div class="widget-wrap side-big-banner">
     <!-- admax -->
     <script src="https://adm.shinobi.jp/s/b6376bdbfa86108abed40651183e1f0f"></script>
+    <!-- admax -->
+  </div>
+  <div class="widget-wrap side-small-banner">
+    <!-- admax -->
+    <script src="https://adm.shinobi.jp/s/b6007e4c0a59df7fd9d39fedf74c861a"></script>
     <!-- admax -->
   </div>
   <% theme.widgets.forEach(function(widget){ %>
     <%- partial('_widget/' + widget) %>
   <% }) %>
-  <div class="widget-wrap">
+  <div class="widget-wrap side-big-banner">
     <!-- MAF Rakuten Widget FROM HERE -->
     <script type="text/javascript">MafRakutenWidgetParam=function() { return{ size:'300x250',design:'slide',recommend:'on',auto_mode:'on',a_id:'2408397', border:'off'};};</script><script type="text/javascript" src="//image.moshimo.com/static/publish/af/rakuten/widget.js"></script>
     <!-- MAF Rakuten Widget TO HERE -->
   </div>
-  <div class="widget-wrap">
+  <div class="widget-wrap side-big-banner">
     <div id="im-bd249578155142d09e95c73772b14322">
       <script async src="https://imp-adedge.i-mobile.co.jp/script/v1/spot.js"></script>
       <script>(window.adsbyimobile=window.adsbyimobile||[]).push({pid:21487,mid:530652,asid:1735260,type:"banner",display:"inline",elementid:"im-bd249578155142d09e95c73772b14322"})</script>
