--- a/themes/landscape/source/css/_variables.styl
+++ b/themes/landscape/source/css/_variables.styl
@@ -53,11 +53,12 @@ else
   _sidebar-column = 0
 
 // Grids
-column-width = 80px
+column-width = 79px
 gutter-width = 20px
 columns = main-column + _sidebar-column
 
 // Media queries
 mq-mobile = "screen and (max-width: 479px)"
-mq-tablet = "screen and (min-width: 480px) and (max-width: 767px)"
-mq-normal = "screen and (min-width: 768px)"
+mq-tablet = "screen and (min-width: 480px) and (max-width: 747px)"
+mq-small-pc = "screen and (min-width: 748px) and (max-width: 1107px)"
+mq-normal = "screen and (min-width: 1108px)"
