デザインの修正など

--- a/themes/landscape/source/css/_partial/article.styl
+++ b/themes/landscape/source/css/_partial/article.styl
@@ -79,9 +79,9 @@
     padding: 10px 0
   blockquote
     font-family: font-serif
-    font-size: 1.4em
+    border-left:3px solid #66cc99;
     margin: line-height 20px
-    text-align: center
+    padding-left: line-height
     footer
       font-size: font-size
       margin: line-height 0
